# art2img

./: .clang-format  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  BALANCED_PLAN.md  BUILDING.md  CMakeLists.txt  CODE_REVIEW.md  DEEP_THINKER_ANALYSIS.md  Dockerfile  FINAL_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.md  REVIEW_NOTES.md  USAGE.md  build  build.sh  build.yml  ci.yml  compile_commands.json  conventional_commits.md  debug_duke.cpp  debug_palette.cpp  format_code.sh
.agents/: action_log.md
build-tests/: png_memory_regression
cli/: CMakeLists.txt  cli_app_builder.cpp  cli_app_builder.hpp  cli_operations.hpp  config.cpp  config.hpp  config_parser.cpp  config_parser.hpp  conversion_pipeline.cpp  conversion_pipeline.hpp  file_processor.cpp  file_processor.hpp  main.cpp  processor.cpp  processor.hpp  progress_reporter.cpp  progress_reporter.hpp
cmake/: art2img-extractor.pc.in  macos_arm64.cmake  macos_x64.cmake  print_version.cmake  version.hpp.in  windows-toolchain.cmake  windows_x64.cmake  windows_x86.cmake
docs/: ART_(Duke_Nukem_3D).html  ART_Format(Build).html  BUILD_SYSTEM.md  CI_PIPELINE_FIXES_SUMMARY.md  CI_PIPELINE_TROUBLESHOOTING.md  CI_ROLLBACK_PROCEDURES.md  CI_VALIDATION_REPORT.md  PIPELINE_NOTES.md  image_writer_refactoring_plan.md  index.html  library_api.md  module_architecture.md  palette_implementation_report.md  parallel-plan.md  pipeline_requirements.md  plan.md  plan_png_transparency.md  plan_version_releases.md  plan_version_releases_simple.md  review.md  test_coverage_assessment.md
include/: art_file.hpp  cli.hpp  colors.hpp  exceptions.hpp  extractor.hpp  extractor_api.hpp  file_operations.hpp  image_processor.hpp  image_writer.hpp  palette.hpp  png_writer.hpp  tga_writer.hpp  threading.hpp
scripts/: doctor.sh  run_bats_tests.sh  run_transparency_tests.sh  test_common.sh  test_conversion.sh  test_generic.sh  test_transparency.sh  test_windows.sh  validate.sh  verify_windows_tests.sh
src/: animation.cpp  art.cpp  art2image.cpp  art2img.cpp  art_file.cpp  cli.cpp  colors.cpp  convert.cpp  diagnostic.cpp  encode.cpp  error.cpp  io.cpp  (+12 more)
tests/: CMakeLists.txt  doctest_tests.cpp  png_memory_regression.cpp  simple_test.cpp  test_art_file.cpp  test_batch_extraction_files.cpp  test_blood_palette_validation.cpp  test_bmp_format.cpp  test_ci.sh  test_cli_error_messages.cpp  test_cli_options.cpp  test_cli_processing_order.cpp  test_corrupted_files.cpp  test_default_palette_validation.sh  test_extractor_api.cpp  test_full_extraction.cpp  test_functionality.cpp  test_functionality.sh  test_helpers.hpp  test_image_view.cpp  test_integration.cpp  test_library_api.cpp  test_output_directories.cpp  test_palette.cpp  test_palette_comparison.sh  test_palette_functionality.sh  test_png.sh  test_png_memory_regression.cpp  test_setup.cpp  test_transparency.cpp  test_transparency_files.cpp
tests/animation/: CMakeLists.txt  test_animation_export.cpp
tests/api/extractor_api/: test_extractor_api.cpp  test_full_extraction.cpp
tests/api/library_api/: test_library_api.cpp
tests/art/: test_art_loader.cpp
tests/assets/: TILES000.ART  TILES001.ART  TILES002.ART  TILES003.ART  TILES004.ART  TILES005.ART  TILES006.ART  TILES007.ART  TILES008.ART  TILES009.ART  TILES010.ART  TILES011.ART  TILES012.ART
tests/bats/: common.bats  test_cli_basic.bats  test_comprehensive_transparency.bats  test_conversion.bats  test_transparency.bats  test_verify_windows.bats  test_windows.bats
tests/benchmark/: CMakeLists.txt
tests/benchmark/convert/: test_convert_benchmark.cpp
tests/cli/: test_cli_export.cpp
tests/cli/processing/: test_output_directories.cpp
tests/convert/: test_convert.cpp  test_convert_benchmark.cpp
tests/core/art_file/: test_art2img_api.cpp  test_art2img_includes.cpp  test_art_file.cpp  test_image_view.cpp
tests/core/error/: test_error.cpp
tests/core/image_processor/: test_png_memory_regression.cpp  test_transparency.cpp  test_transparency_files.cpp
tests/core/palette/: test_palette.cpp
tests/core/types/: test_color_helpers.cpp  test_constants.cpp
tests/corruption/: test_corrupted_files.cpp
tests/encode/: test_encode.cpp
tests/export/: test_export.cpp
tests/format/bmp/: test_bmp_format.cpp
tests/integration/: CMakeLists.txt  cli_tests.cpp  test_tile_export.cpp
tests/integration/cli/: test_cli_export.cpp
tests/integration/tile_export/: test_tile_export.cpp
tests/io/: test_io.cpp
tests/legacy/: test_legacy_api.cpp
tests/output/png/: animdata.ini
tests/output/tga/: tile0000.tga  tile0001.tga  tile0002.tga  tile0003.tga  tile0004.tga  tile0005.tga  tile0006.tga  tile0007.tga  tile0008.tga  tile0009.tga  tile0010.tga  tile0011.tga  tile0012.tga  tile0020.tga  tile0021.tga  tile0022.tga  tile0023.tga  tile0026.tga  tile0028.tga  tile0030.tga  tile0031.tga  tile0033.tga  tile0040.tga  tile0041.tga  tile0044.tga  tile0047.tga  tile0049.tga  tile0051.tga  tile0052.tga  tile0053.tga  tile0054.tga  tile0055.tga  tile0056.tga  tile0057.tga  tile0059.tga  tile0060.tga  tile0061.tga  tile0070.tga  tile0089.tga  tile0090.tga  (+63 more)
tests/scripts/bats/: common.bats  test_cli_basic.bats
tests/smoke/: CMakeLists.txt  test_smoke.cpp
tests/unit/: CMakeLists.txt
tests/unit/animation/: CMakeLists.txt  test_animation_export.cpp
tests/unit/art/: test_art_loader.cpp
tests/unit/convert/: test_convert.cpp
tests/unit/core/: test_art.cpp  test_convert.cpp  test_encode.cpp  test_palette.cpp
tests/unit/core/api/: CMakeLists.txt  test_builders.cpp  test_convenience.cpp
tests/unit/core/error/: CMakeLists.txt  test_error.cpp  test_error_formatting.cpp
tests/unit/core/format/: CMakeLists.txt  test_format_utils.cpp
tests/unit/core/image/: CMakeLists.txt  test_image_utils.cpp
tests/unit/core/palette/: test_palette.cpp
tests/unit/core/types/: test_color_helpers.cpp  test_constants.cpp
tests/unit/core/validation/: CMakeLists.txt  test_validation.cpp
tests/unit/encode/: test_encode.cpp
tests/unit/export/: test_export.cpp
tests/unit/io/: test_grp.cpp  test_io.cpp
(+125 files in other folders)
